--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.JPG filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.fit filter=lfs diff=lfs merge=lfs -text
+*.ttf filter=lfs diff=lfs merge=lfs -text
